<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="profile">Profil</string>
    <string name="name">Fakhri Ramadhan</string>
    <string name="status">Saya Ganteng</string>
    <string name="nohp">082216649948</string>
    <string name="info">ini bukan nama pengguna atau pin anda, nama ini akan terlihat oleh kontak whatsapp anda.</string>
    <string name="about">about and phone number</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
