<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoprofil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/foto" />

        <ImageButton
            android:id="@+id/iconkamera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="31dp"
            android:layout_marginEnd="128dp"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:background="@drawable/circle"/>



    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textSize="18sp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pensil"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:padding="16sp"
            android:text="@string/info"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="16sp"
            android:textColor="#128c7e"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="18sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <view
        android:layout_width="match_parent"
        android:layout_height="1sp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hohp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nohp"
                android:textSize="18sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>